manifests/manifests/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort
  ports:
    - port: 443        
      targetPort: 443  
      nodePort: 32443  
  selector:
    app: argocd-server
